fixed header z-index

--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -2,7 +2,7 @@
 
 header {
   width: 100%;
-  z-index: 10;
+  z-index: 1;
   height: 435px;
 
   &::before {
